<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorGreen_01">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/provG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlue_02"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/proveedorDefault_title"/>
        <ImageView
            android:id="@+id/imgG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/loading_png"
            android:adjustViewBounds="true" />
        <TextView
            android:id="@+id/razonG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorBlue_02"
            android:textSize="18sp"
            android:text="@string/razon_social_title"/>
        <TextView
            android:id="@+id/concepG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/concepto_title"
            android:textColor="@color/colorBlue_02"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/fechaG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_title"
            android:textColor="@color/colorBlue_02"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/totalG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_title"
            android:textColor="@color/colorBlue_02"
            android:textSize="18sp"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>