<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorBlue_03"
    android:orientation="vertical"
    tools:context=".MainActivity5">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8500000" />

    <AutoCompleteTextView
        android:id="@+id/et_razon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_01"
        android:completionThreshold="0"
        android:ems="12"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center_horizontal"
        android:hint="@string/razon_social_title"
        android:inputType="textAutoComplete"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline50"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline48" />

    <EditText
        android:focusedByDefault="true"
        android:id="@+id/et_prov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_01"
        android:ems="12"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center_horizontal"
        android:hint="@string/proveedorDefault_title"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline49"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline45" />

    <EditText
        android:id="@+id/et_nit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_01"
        android:ems="12"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center_horizontal"
        android:hint="@string/cc_nit_title"
        android:inputType="number"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline49" />
6
    <Button
        android:id="@+id/btn_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_01"
        android:digits=""
        android:ems="12"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center_horizontal"
        android:hint="@string/presiona_para_ingresar_una_fecha"
        android:padding="5dp"
        android:textColorHint="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toEndOf="@+id/et_lugar"
        app:layout_constraintStart_toStartOf="@+id/et_lugar"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <EditText
        android:id="@+id/et_lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_01"
        android:digits="@string/abc"
        android:ems="12"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center_horizontal"
        android:hint="@string/lugar_title"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline50" />

    <ImageButton
        android:id="@+id/btnSiguiente6"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bordes_title_01"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:srcCompat="@drawable/ic_arrow_forward" />

    <ImageButton
        android:id="@+id/btnAtras6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bordes_title_01"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView_tip0106"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bordes_title_02"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center_horizontal"
        android:paddingLeft="18sp"
        android:paddingRight="18sp"
        android:text="@string/title_tip_0603"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <TextView
        android:id="@+id/textTitle_07"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/bordes_title_03"
        android:ems="12"
        android:fontFamily="@font/chelsea_market"
        android:paddingLeft="15dp"
        android:paddingRight="50dp"
        android:text="@string/name_default"
        android:textColor="@color/colorBlue_01"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline79" />

    <ImageView
        android:id="@+id/imageViewLeft"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline78"
        app:layout_constraintTop_toTopOf="@+id/guideline79"
        app:layout_constraintVertical_bias="0.466"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.155555" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43" />


    <TextView
        android:id="@+id/tv_nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline53"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3333333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.066666" />

</androidx.constraintlayout.widget.ConstraintLayout>