<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8">

    <ImageButton
        android:id="@+id/btnSig8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bordes_title_01"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline62"
        app:layout_constraintTop_toTopOf="@+id/guideline61"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_arrow_forward" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@drawable/bordes_title_03"
        android:fontFamily="@font/chelsea_market"
        android:paddingLeft="18sp"
        android:paddingRight="18sp"
        android:text="@string/title_tip_0602"
        android:textColor="@color/colorGreenClean"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline55"
        app:layout_constraintVertical_bias="0.513" />

    <ImageButton
        android:id="@+id/btnAtras8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bordes_title_01"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline61"
        app:layout_constraintVertical_bias="0.973"
        app:srcCompat="@drawable/ic_arrow_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.180000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75500000" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/foto_imagen"
        android:textColor="@color/colorGreenDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline63"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline60"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/descripcion_title02"
        android:textColor="@color/colorGreenDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline77"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline59"
        app:layout_constraintVertical_bias="0.652" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_04"
        android:fontFamily="@font/chelsea_market"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/soporte_title"
        android:textColor="@color/colorGreenClean"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline55"
        app:layout_constraintVertical_bias="0.897" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="210dp"
        android:layout_height="115dp"
        android:background="@null"
        android:gravity="top|start"
        android:hint="@string/descripcion_title"
        android:lines="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/guideline61"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2400000000000" />

    <TextView
        android:id="@+id/tvUserName_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline55"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_pre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline59"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline63"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <TextView
        android:id="@+id/tvSubirFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_01"
        android:ems="8"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/subir_imagen"
        android:textColor="@color/colorBlue_02"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline62"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="@+id/guideline57"
        app:layout_constraintTop_toTopOf="@+id/guideline61"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:visibility="invisible"
        android:enabled="false"
        android:id="@+id/tvTomatFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_title_01"
        android:ems="8"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/tomar_foto"
        android:textColor="@color/colorBlue_02"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline58"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="@+id/guideline62"
        app:layout_constraintTop_toTopOf="@+id/guideline61"
        app:layout_constraintVertical_bias="0.118" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5800000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.520000" />

</androidx.constraintlayout.widget.ConstraintLayout>